--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ user_title: Computer Engineer, Android Developer,Data Scientist enthusiast, Web 
 email: ghulmukh10@gmail.com
 twitter_username: 
 github_username:  Gauravhulmukh
-facebook_username: 10000201058967
+facebook_username: hulmukh
 gplus_username: 
 linkedin_username: gaurav-hulmukh-932648166
 
