--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: Portfolio
 # User settings
 username: Gaurav Hulmukh 
 user_description:
-user_title: Computer Engineer, Android Developer,Data Scientist enthusiast, Web & Code Fanatic
+user_title: Computer Engineer, Android Developer,Data Science enthusiast, Web & Code Fanatic
 email: ghulmukh10@gmail.com
 twitter_username: 
 github_username:  Gauravhulmukh
